--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@azure/msal-browser": "^2.37.0",
+		"@fluentui/svg-icons": "^1.1.198",
+		"sass": "^1.62.1",
+		"svelte-i18n": "^3.6.0"
+	}
 }
