--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+	"dependencies": {
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -26,13 +25,12 @@
 		"svelte-check": "^3.0.1",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
-	},
-	"type": "module",
-	"dependencies": {
+		"vite": "^4.3.0",
 		"@azure/msal-browser": "^2.37.0",
 		"@fluentui/svg-icons": "^1.1.198",
+		"@sveltejs/adapter-vercel": "^2.4.3",
 		"sass": "^1.62.1",
 		"svelte-i18n": "^3.6.0"
-	}
+	},
+	"type": "module"
 }
