--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,20 @@
 name: Release Esmerelda
 
 on:
-  push:
-    branches:
-      - rel
+  pull_request:
   workflow_dispatch:
 
 jobs:
   create-release:
+    if: ${{ github.ref == 'refs/heads/rel' }}
     runs-on: ubuntu-latest
     steps:
     -
-      name: Create Release ${{ github.event.pull_request.title }}
+      name: Create Release
       uses: bfren/create-release@v1
       with:
         token: ${{ secrets.TOKEN }}
         branch: rel
-        repo: RiversideValley/Esmerelda
+        repo: ${{ github.repository }}
+        title: ${{ github.event.pull_request.title }}
+        latest: true
