--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,5 @@ jobs:
       uses: bfren/create-release@v1
       with:
         token: ${{ secrets.TOKEN }}
-        branch: rel
         repo: ${{ github.repository }}
-        title: ${{ github.event.pull_request.title }}
-        latest: true
+        pr_title: ${{ github.event.pull_request.title }}
