--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-  "name": "@riversidevalley/esmerelda",
-  "version": "0.1.2",
-  "description": "Dashboard interface for your sweet maid.",
-  "homepage": "https://www.esmerelda.tech",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/RiversideValley/Esmerelda.git"
-  },
-  "publishConfig": {
-	  "@riversidevalley:registry": "https://npm.pkg.github.com"
-  },
-  "license": "MIT",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "dependencies": {
-    "@azure/msal-browser": "^2.37.0",
-    "@fluentui/svg-icons": "^1.1.198",
-    "@sveltejs/adapter-vercel": "^2.4.3",
-    "@sveltejs/kit": "^1.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "@vercel/postgres": "^0.1.3",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.26.0",
-    "fluent-svelte": "^1.6.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "sass": "^1.62.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "svelte-i18n": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.3.0"
-  },
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/RiversideValley/Esmerelda/issues"
-  },
-  "main": "svelte.config.js",
-  "keywords": [
-    "cloud",
-    "esmerelda",
-	"esme",
-    "services",
-    "online",
-    "website"
-  ],
-  "author": "Riverside Valley Corporation"
+	"name": "@riversidevalley/esmerelda",
+	"version": "0.1.2",
+	"description": "Dashboard interface for your sweet maid.",
+	"homepage": "https://www.esmerelda.tech",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/RiversideValley/Esmerelda.git"
+	},
+	"publishConfig": {
+		"@riversidevalley:registry": "https://npm.pkg.github.com"
+	},
+	"license": "MIT",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
+	},
+	"dependencies": {
+		"@azure/msal-browser": "^2.37.0",
+		"@fluentui/svg-icons": "^1.1.198",
+		"@sveltejs/adapter-vercel": "^2.4.3",
+		"@sveltejs/kit": "^1.5.0",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
+		"@vercel/postgres": "^0.1.3",
+		"eslint": "^8.28.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte": "^2.26.0",
+		"fluent-svelte": "^1.6.0",
+		"path": "^0.12.7",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"sass": "^1.62.1",
+		"svelte": "^3.54.0",
+		"svelte-check": "^3.0.1",
+		"svelte-i18n": "^3.6.0",
+		"tslib": "^2.4.1",
+		"typescript": "^5.0.0",
+		"vite": "^4.3.0"
+	},
+	"type": "module",
+	"bugs": {
+		"url": "https://github.com/RiversideValley/Esmerelda/issues"
+	},
+	"main": "svelte.config.js",
+	"keywords": [
+		"cloud",
+		"esmerelda",
+		"esme",
+		"services",
+		"online",
+		"website"
+	],
+	"author": "Riverside Valley Corporation"
 }
