📦 Update package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@riversidevalley/esmerelda",
-	"version": "0.1.2",
+	"version": "0.2.0@can",
 	"description": "Dashboard interface for your sweet maid.",
 	"homepage": "https://www.esmerelda.tech",
 	"repository": {
